# cim

./: Cargo.toml
src/: args.rs  buffer.rs  editor.rs  highlight.rs  input.rs  main.rs  ui.rs
