[package]
name = "cim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] } # CLI parsing
tokio = { version = "1", features = ["full"] } # Async support
egui = "0.31"  # GUI framework
eframe = "0.31" # GUI wrapper for egui
ropey = "1.6.1" # Text buffer for editing
winapi = { version = "0.3", features = ["windef", "winuser"] }
syntect = "5.0"
rayon = "1.10.0"
parking_lot = "0.12.3"
num_cpus = "1.16.0"
bytecount = "0.6.8"
diff = "0.1"
tui = "0.19.0"
crossterm = "0.29.0"

[profile.release]
debug = true

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]